--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
