--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify-icons/ic": "^1.1.7",
+    "@iconify/react": "^1.1.4"
   }
 }
