--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify-icons/akar-icons": "^1.1.17",
+    "@iconify-icons/fluent": "^1.1.22",
     "axios": "^0.21.1",
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
