--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@iconify-icons/akar-icons": "^1.1.17",
     "@iconify-icons/bx": "^1.1.1",
+    "@iconify-icons/ci": "^1.1.0",
     "@iconify-icons/ic": "^1.1.7",
     "@iconify/react": "^1.1.4"
   }
