--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,6 +41,7 @@
     "@iconify-icons/akar-icons": "^1.1.17",
     "@iconify-icons/bx": "^1.1.1",
     "@iconify-icons/ic": "^1.1.7",
-    "@iconify/react": "^1.1.4"
+    "@iconify/react": "^1.1.4",
+    "cypress": "^8.0.0"
   }
 }
